# orcf

./: CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  orcf_ddraw.c  orcf_ddraw.def  orcf_ddraw.rc  orcf_test.c
.github/workflows/: build.yml
